@@ -35,14 +35,18 @@ DIST emacs-18.59-linux22x-elf-glibc21.diff.gz 15671 RMD160 4fab87eead1a66d767d23
 DIST emacs-18.59.tar.gz 2962652 RMD160 4976d0f0f34b6d54db6774d24a528f74a3bb20dc SHA1 15b25bf130e3eeb91f3eea8c01a3dec9aabf23cc SHA256 1e27e33f91984a91e9b4c1f21433f931aba03670960ecc147bb6d7b0de0f051e
 DIST emacs-21.4a.tar.gz 20403483 RMD160 c312e739935b56d08783bbfe97992297a363cb8a SHA1 cdb33731180fe4a912838af805dd35e3f55394d4 SHA256 1d50ddae117c48d689a3d772e390569edccfdc22168be0112d2093bd2d7c3216
 DIST leim-21.4.tar.gz 3291433 RMD160 89e1108bfe06425a0d6b4d941f9c297551bafcca SHA1 dd63f9aca1a58d40d9d426dd410fb627230974f7 SHA256 db24946985dd644bfed18815d6e991dad27f8ab1fd5823dd6dc4eb8dcd04333b
-EBUILD emacs-18.59-r2.ebuild 2953 RMD160 9609f43728c00b566bde4e29bf63704ebbd5423d SHA1 6cb1ac7fdd25fcedb38ee1093a6e5b9fdf8db8e8 SHA256 ad0a276741aeca1a70ff95100b1475e5163fc830db1a6c512c0c07bd33c15a0a
-MD5 7c4e4f1870a935210efd16c2fb42d6f8 emacs-18.59-r2.ebuild 2953
-RMD160 9609f43728c00b566bde4e29bf63704ebbd5423d emacs-18.59-r2.ebuild 2953
-SHA256 ad0a276741aeca1a70ff95100b1475e5163fc830db1a6c512c0c07bd33c15a0a emacs-18.59-r2.ebuild 2953
-EBUILD emacs-21.4-r9.ebuild 5727 RMD160 e879aeb102baa9977fee9a40d18c4a0acc001be2 SHA1 6e6e807744022fd28abee3349a9597745d652584 SHA256 2a692ffbdc1203341a019866b2f54460a7f6faa7a048a8466cc2879545cdc3c2
-MD5 92f4d4ff1be57566edb7db155c0bbf53 emacs-21.4-r9.ebuild 5727
-RMD160 e879aeb102baa9977fee9a40d18c4a0acc001be2 emacs-21.4-r9.ebuild 5727
-SHA256 2a692ffbdc1203341a019866b2f54460a7f6faa7a048a8466cc2879545cdc3c2 emacs-21.4-r9.ebuild 5727
+EBUILD emacs-18.59-r2.ebuild 2966 RMD160 a127205bfc4a4a138c4ca14ab454256679d45a9f SHA1 514e00098c9e8a8044f215121fe66496ab3dff22 SHA256 7edda4bcd967665279220127c98ffc073ac268c984792bf3791c5821a1628bd8
+MD5 b81150af31e2dbea759633d81b78fed4 emacs-18.59-r2.ebuild 2966
+RMD160 a127205bfc4a4a138c4ca14ab454256679d45a9f emacs-18.59-r2.ebuild 2966
+SHA256 7edda4bcd967665279220127c98ffc073ac268c984792bf3791c5821a1628bd8 emacs-18.59-r2.ebuild 2966
+EBUILD emacs-21.4-r9.ebuild 5609 RMD160 381e9fd62647a85257b7cf1e6b518edd57dd1374 SHA1 e454606097898969ca3d98c6f59f0054683bd909 SHA256 da195b95b3b57d7965588ba9901acd983009d9144216339cc25205a9bded6963
+MD5 ed2521a8a3be82c1e3e941f5fc9bbc3d emacs-21.4-r9.ebuild 5609
+RMD160 381e9fd62647a85257b7cf1e6b518edd57dd1374 emacs-21.4-r9.ebuild 5609
+SHA256 da195b95b3b57d7965588ba9901acd983009d9144216339cc25205a9bded6963 emacs-21.4-r9.ebuild 5609
+MISC ChangeLog 876 RMD160 2c97bf1e437b446dda6c5c40ded527fc0197c86f SHA1 c4a33db0d75b0e7361321bf1c37c4e8529ea3a4b SHA256 b0d4205f0a84d9bbf68295c5e005656017cb3b45420afdac642d61ff5366b541
+MD5 d8aed2e2da6a0c892bca718d9e5be827 ChangeLog 876
+RMD160 2c97bf1e437b446dda6c5c40ded527fc0197c86f ChangeLog 876
+SHA256 b0d4205f0a84d9bbf68295c5e005656017cb3b45420afdac642d61ff5366b541 ChangeLog 876
 MISC metadata.xml 158 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 SHA1 61f6eff9729cd87a725c2a70c81aca4270a17fc4 SHA256 1393bdef3a74343fdb40a112c7096a1af16f67e7a43413250de28dfe73810eab
 MD5 fcd33d07e4ee719b01157946734f4fe8 metadata.xml 158
 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 metadata.xml 158
