@@ -2,6 +2,9 @@
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  16 Mar 2007; Christian Faulhammer <opfer@gentoo.org> emacs-21.4-r9.ebuild:
+  removed Header, prepared for eselect
+
   16 Mar 2007; Christian Faulhammer <opfer@gentoo.org>
   emacs-18.59-r2.ebuild:
   removed Header, prepared for eselect
